# LNJ_DREAMTEAMFEVER

./: .gitignore  README.md  RoadTest.cpp  RoadTests.h  TODO.txt  boom.txt  sum.dot  timelog.md  todo.md
IO/: README.txt  Roadsigns.xml  single_connection.xml  single_connection_n_cars.xml  single_road.xml  single_road_n_cars.xml  tree_n_types.xml  tree_types_lanes.xml  tree_types_lanes_signs.xml
IO/TEST_IO/: disconnected_roads_empty.xml  loop_connection.xml
IO/logs/: releaseGlobalLog.txt
LNJ_PIZZA_PROJECT/: main.cpp
contracts/: Ct_Xml-Parser.md  Ct_Xml-Parser.txt
src/: CMakeLists.txt  Car.cpp  Car.h  CarLike.cpp  CarLike.h  CarTests.h  DefaultVehicle.cpp  DefaultVehicle.h  Exceptions.cpp  Exceptions.h  IOTests.h  Logger.cpp  Logger.h  Output.cpp  Output.h  Road.cpp  Road.h  RoadSigns.cpp  RoadSigns.h  RoadSystem.cpp  RoadSystem.h  RoadTests.h  Serialiser.cpp  Serialiser.h  TypedVehicles.cpp  TypedVehicles.h  Vehicle.cpp  Vehicle.h  VehicleTests.cpp  VehicleTests.h  XMLParser.cpp  XMLParser.h  XMLParserTests.h  design_by_contract.h  main.cpp  single_road.xml  tests.cpp
src/Tests/: CarTests.h  LoggerTests.h  OutputTests.h  RoadSystemTests.h  RoadTests.h  Tests.cpp  VehicleTests.h  XMLParserTests.h  disconnected_roads.xml  fileHelpers.cpp  fileHelpers.h
src/Tests/test_in/: false1.xml  false2.xml  false3.xml  false4.xml  linear_signs.xml  linear_types.xml  tree_connection.xml  tree_n_types.xml
src/Tests/test_out_expected/: PARSE_BASE_Road.txt  PARSE_SIGNAL_All.txt  PARSE_TYPES_All.txt  ROAD_Network_0.txt  SIGN_All_0.txt  VEH_Base_0.txt  VEH_Base_1.txt  VEH_Types_0.txt
src/Tests/test_out_real/: LOG_GENERIC_Log.txt  PARSE_BASE_Car.txt  PARSE_NETWORK_Loop.txt  PARSE_NETWORK_Tree.txt  ROAD_BASE_2.txt  ROAD_Base_0.txt  ROAD_Base_1.txt  ROAD_LANES_0.txt  ROAD_LANES_1.txt  ROAD_NETWORK_1.txt  SIGN_All_1.txt  VEH_Types_1.txt
src/gtest/include/gtest/: gtest.h
src/gtest/lib/: README.md
src/tinystuff/: CMakeLists.txt
